# linkup_mcp

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Close-DevPorts.bat  DECISIONS.md  ENV_TEMPLATE.md  IMPLEMENTATION_PLAN.md  LICENSE  NEXT_STEPS.md  Nami-Build-Bridge.bat  PROJECT_CONTEXT.md  README.md  SECURITY_PRIVACY_CONSIDERATIONS.md  STANDUP_BOT.md  STITCH_STATUS.md  Stitch-Bundled-Gui.bat  Stitch-Desktop.bat  Stitch.bat  local_whisper_stt.py  nami_build_bridge.py  ollama_config.py  package-lock.json  package.json  pyproject.toml  rag.py  rag_heuristics.py  rag_regression.py  rag_runtime.py  rag_stitch_contract.py  reel_workflow.py  run_demo.py  server.py  stitch_demo_cli.py  stitch_gui.py  stitch_rag_bridge.py  voice_prompt_tool.py
.cursor/rules/: loop-engineering.mdc  model-routing.mdc  ranne-nami-handoff.mdc
.github/workflows/: ci.yml
analytics_engine/: __init__.py  extractor.py
bridge/: __init__.py  cors.py  errors.py  face_routes.py  health.py  rag_routes.py  spa.py  voice_routes.py
config/: templates.json
data/build-queue/: .gitignore
data/inbox/: DZ5H6F1Rz1S.md  DZ5H6F1Rz1S.meta.json  DZ5H6F1Rz1S.workflow.md  DZsi3jopAZW.md  DZsi3jopAZW.workflow.md  Ry3YyG22EUc.md  Ry3YyG22EUc.workflow.md  https-www-instagram-com-reels-DW7lN7sj2ow.md  https-www-instagram-com-reels-DW7lN7sj2ow.meta.json  https-www-instagram-com-reels-DW7lN7sj2ow.workflow.md  https-www-youtube-com-watch-v-Ry3YyG22EUc.md  https-www-youtube-com-watch-v-Ry3YyG22EUc.meta.json  https-www-youtube-com-watch-v-Ry3YyG22EUc.workflow.md  loop-engineering-sabrina.md
demo_app/: __init__.py  app.py
demos/scroll-frames/: README.md  generate_frames.py  index.html  main.js  styles.css
docs/: TEE_PARTNER.md  U2SSO_SETUP.md  stitch_user_guide.md
docs/dev/: CLAUDE_CODE.md  PR_CONSOLIDATED_BODY.md  PR_TRIAGE.md
docs/elevenlabs/: NAMI.md  README.md
docs/hermes/: DAILY_BRIEF.md  LOOP_ENGINEERING.md  MAC_SETUP.md  MEMORY.md  MOBILE_BUILD.md  MOBILE_BUILD_MAC.env.example  MOBILE_BUILD_PC.env.example  MOBILE_BUILD_VPS.env.example  NAMI.md  PC_CLIENT.md  PC_SETUP.md  REEL_BACKLOG.md  SETUP.md  STATUS.md  SURFACE_MAP.md  VPS_MIGRATION.md  VPS_SETUP.md
docs/local-oauth-playbook/: PLAYBOOK.md  README.md  SPLITTING-TO-OWN-REPO.md
docs/local-oauth-playbook/examples/: oauth.env.example
docs/stitch/: MIGRATION.md  README.md  STATUS.md
docs/supplyme/: README.md
elevenlabs_toolkit/: __init__.py  cli.py  config.py  music.py  nami_voices.py  tts.py
face_verification/: __init__.py  camera.py  core.py  liveness.py  storage.py
hermes-nami/: AGENTS.md  SOUL.md  config.yaml  model-routing.yaml
hermes-nami/memories/: LOOP_LOG.md  MEMORY.md  USER.md
hermes-nami/skills/: daily-brief-loop.md  linkup-mcp.md  loop-checker.md  mobile-build-request.md  model-routing.md
hermes-nami/skills/brief/: SKILL.md
hermes-nami/skills/linkup-mcp/: SKILL.md
hermes-nami/skills/loop-checker/: SKILL.md
identity_core/: __init__.py  auth.py  nullifier_store.py  schemas.py
integrations/stitch/: AppShell.tsx  AppearanceSection.tsx  Dashboard.tsx  FaceVerificationPanel.tsx  GamifiedSettingsView.tsx  GmailSubscriptionDiscovery.tsx  GoogleSignInPanel.tsx  LinkupRagPanel.tsx  README.md  SettingsPanel.tsx  SignInPage.tsx  StitchAppRoot.tsx  TAILWIND_GAMIFY.md  desktop-dependencies.md  stitchBridge.ts  voiceCommands.ts
lucky-charm/: .gitignore  DEMO_PROMPT_FOR_AI.md  DEMO_REAL_ALIGNMENT.md  DEMO_SCRIPT.md  HACKED_Hackathon1Sample.tab  IMPROVEMENT_PLAN.md  LLM_CONTEXT_DESIGN.md  package-lock.json  package.json
lucky-charm/scripts/: fetch-stitch-screens.js  free-port-3000.sh  generate_mock_hackathon_tabs.py  sso_mock_server.py
lucky-charm/sso-poc-stub/: README.md  sso_stub.py
lucky-charm/stitch-export/: screen-1-dae38337.html  screen-10-43a19775.html  screen-2-c663cd65.html  screen-3-0aafb778.html  screen-4-0fadda15.html  screen-5-e1c69b0a.html  screen-6-9adf0d30.html  screen-7-48001f69.html  screen-8-27ea5af3.html  screen-9-066862fc.html
nami_build/: __init__.py  agent_runner.py  http.py  queue.py  run_job.py  worker.py
nami_corpus/: __init__.py  __main__.py  sync.py
processing_boundary/: __init__.py  boundary.py  schemas.py
scripts/: Close-StaleBugbotPrs.ps1  Close-StitchDevPorts.ps1  Refresh-NamiStack.ps1  Setup-NamiBuild.ps1  Setup-NamiDailyBrief.ps1  Start-ClaudeCiLoop.ps1  Start-NamiBuildBridge.ps1  Start-NamiGateway.ps1  Start-Stitch.ps1  Start-StitchBundledGui.ps1  Start-StitchDesktop.ps1  StitchPaths.ps1  Sync-NamiRagCorpus.ps1  Test-NamiBuildEnqueue.ps1  Uninstall-Hermes-Windows.ps1  apply-nami-model-routing.sh  build_nami_rag_corpus.py  copy-stitch-desktop-to-integrations.ps1  hermes.ps1  install-nami-gateway-systemd.sh  install-nami-hermes.ps1  install-nami-hermes.sh  install-nami-mcp-mac.ps1  install-nami-mcp-mac.sh  install-nami-mcp-pc.ps1  install-nami-stack-mac.sh  install-nami-stack-pc.ps1  install-nami-stack-vps.sh  nami_rag_eval.py  run-linkup-mcp-stdio.sh  run-stitch-ui.mjs  ssh-nami-mac.example  start-nami-gateway.sh  sync-integrations-stitch-to-desktop.ps1  test-linkup-mcp-mac.sh  transcribe_reel.py  verify-nami-hermes.sh
stitch_auth/: __init__.py  flask_routes.py  google_client.py  store.py
tests/: __init__.py  test_bridge_root_html.py  test_bridge_routes.py  test_elevenlabs_config.py  test_face_route_auth.py  test_face_storage.py  test_face_verify_threshold.py  test_identity_core.py  test_local_whisper_stt.py  test_nami_build.py  test_nami_corpus.py  test_nami_mcp_scripts.py  test_nami_scripts.py  test_nami_voices.py  test_oauth_linking.py  test_oauth_refresh_reuse.py  test_ollama_config.py  test_rag_heuristics.py  test_rag_runtime.py  test_rag_runtime_recovery.py  test_rag_stitch_contract.py  test_reel_workflow.py  test_stitch_auth_helpers.py  test_stitch_auth_store.py  test_stitch_auth_store_permissions.py  test_stitch_bridge_security.py  test_stitch_bridge_static.py  test_stitch_bridge_static_paths.py  test_subscription_store.py  test_voice_prompt_tool.py  test_voice_prompt_tool_async.py  test_voice_prompt_tool_lock.py  test_voice_prompt_tool_logging.py
(+2 files in other folders)
