[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cursor-linkup-mcp"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5,<7.0",
    "linkup-sdk>=0.2.4,<0.3",
    "llama-index>=0.12.25,<0.13",
    "llama-index-embeddings-huggingface>=0.5.2,<0.6",
    "llama-index-llms-ollama>=0.5.3,<0.6",
    "mcp[cli]>=1.5.0,<2.0",
    "python-dotenv>=1.0.0,<2.0",
    "nest-asyncio>=1.6.0,<2.0",
    "flask>=3.0.0,<4.0",
    # Local face verification (Stitch bridge) — CPU inference; first DeepFace run may download model weights.
    "deepface>=0.0.79",
    "opencv-python>=4.8.0",
    "cryptography>=41.0.0",
    "numpy>=1.24.0,<3",
    "tensorflow>=2.16.0,<2.22",
    # Keras 3 (from deepface/keras) breaks transformers' TF paths unless tf_keras is installed.
    "tf-keras>=2.16.0",
    "requests>=2.31.0,<3",
    "google-auth>=2.29.0,<3",
    "google-auth-oauthlib>=1.2.0,<2",
    "google-auth-httplib2>=0.2.0,<1",
    "google-api-python-client>=2.130.0,<3",
]

[project.optional-dependencies]
# Single-window Stitch: Flask serves apps/desktop/dist + pywebview shell (see stitch_gui.py).
stitch-gui = [
    "pywebview>=5.0,<6",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

# Root-level modules (no package dir) so `pip install -e .` can resolve imports like `from server import …`.
[tool.setuptools]
py-modules = [
    "server",
    "rag",
    "agents",
    "stitch_rag_bridge",
    "stitch_gui",
    "stitch_demo_cli",
    "rag_regression",
    "notes_app_pokemon",
]

