[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cursor-linkup-mcp"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5,<7.0",
    "linkup-sdk>=0.2.4,<0.3",
    "llama-index>=0.12.25,<0.13",
    "llama-index-embeddings-huggingface>=0.5.2,<0.6",
    "llama-index-llms-ollama>=0.5.3,<0.6",
    "mcp[cli]>=1.5.0,<2.0",
    "python-dotenv>=1.0.0,<2.0",
    "nest-asyncio>=1.6.0,<2.0",
]

[project.optional-dependencies]
# Stitch HTTP bridge (`stitch_rag_bridge.py`), face stack, Google OAuth/Gmail, server-side voice STT.
stitch-bridge = [
    "flask>=3.0.0,<4.0",
    "deepface>=0.0.79",
    "opencv-python>=4.8.0",
    "cryptography>=41.0.0",
    "numpy>=1.24.0,<3",
    "tensorflow>=2.16.0,<2.22",
    "tf-keras>=2.16.0",
    "requests>=2.31.0,<3",
    "google-auth>=2.29.0,<3",
    "google-auth-oauthlib>=1.2.0,<2",
    "google-auth-httplib2>=0.2.0,<1",
    "google-api-python-client>=2.130.0,<3",
    "SpeechRecognition>=3.10.4,<4",
]
# Single-window Stitch: Flask serves apps/desktop/dist + pywebview shell (see stitch_gui.py).
stitch-gui = [
    "pywebview>=5.0,<6",
]
# Local Whisper STT for POST /api/voice/transcribe (offline; auto-picked when installed).
stitch-whisper = [
    "faster-whisper>=1.0.3,<2.0",
]
voice-prompt = [
    "numpy>=1.24.0,<3",
    "pynput>=1.7.7,<2.0",
    "sounddevice>=0.4.6,<1.0",
    "pyperclip>=1.9.0,<2.0",
    "pyautogui>=0.9.54,<0.10",
    "pystray>=0.19.5,<0.20",
    "pillow>=10.0.0,<12",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

# Root-level modules (no package dir) so `pip install -e .` can resolve imports like `from server import …`.
[tool.setuptools]
py-modules = [
    "server",
    "rag",
    "rag_runtime",
    "rag_stitch_contract",
    "agents",
    "stitch_rag_bridge",
    "local_whisper_stt",
    "stitch_gui",
    "rag_regression",
    "notes_app_pokemon",
    "voice_prompt_tool",
]

